--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@ var marker = new kakao.maps.Marker({
 //marker.setMap(map);
  
 // 인포윈도우를 생성합니다
-var infowindow = new kakao.maps.InfoWindow({
+/* var infowindow = new kakao.maps.InfoWindow({
     content : "<div style='position: absolute; left: 0px; top: 0px;'><div style='width:140px;padding:1px;text-align:center;'>칠성종합시장</div></div>" 
-});
+}); */
   
 // 마커 위에 인포윈도우를 표시합니다. 두번째 파라미터인 marker를 넣어주지 않으면 지도 위에 표시됩니다
 //infowindow.open(map, marker); 
