--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
                         var zoomControl = new kakao.maps.ZoomControl();
                         map.addControl(zoomControl, kakao.maps.ControlPosition.RIGHT);
 
+                        ////// 내위치 스크립트 시작
                         var gps_use = null; //gps의 사용가능 여부
                         var gps_lat = null; // 위도
                         var gps_lng = null; // 경도
@@ -139,14 +140,12 @@
                             }
                         }
 
-
                         // gps 이용 가능 시, 위도와 경도를 반환하는 showlocation함수.
                         function showLocation(position) {
                             gps_use = true;
                             gps_lat = position.coords.latitude;
                             gps_lng = position.coords.longitude;
                         }
-
 
                         // error발생 시 에러의 종류를 알려주는 함수.
                         function errorHandler(error) {
