--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
             <div class="contents">
                 <div class="mapWrap">
-                    <button type="button" class="btnMyLocation" onclick="gps_tracking();">내위치</button>
+                    <button type="button" class="btnMyPosition" onclick="gps_tracking();">내위치</button>
                     <div id="map" style="width: 100%;height: 290px;"></div>
                     <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=d33f98f36ac24cf4e5878e94b8c8fad9"></script>
                     <script>
@@ -159,7 +159,7 @@
                         function gps_tracking(){
                             if (gps_use) {
                                 map.panTo(new kakao.maps.LatLng(gps_lat,gps_lng));
-                                var gps_content = '<div><img class="pulse" draggable="false" unselectable="on" src="https://ssl.pstatic.net/static/maps/m/pin_rd.png" alt=""></div>';
+                                var gps_content = '<div class="myPosition"><img draggable="false" unselectable="on" src="assets/images/myPositionPin.svg" alt=""></div>';
                                 var currentOverlay = new kakao.maps.CustomOverlay({
                                     position: new kakao.maps.LatLng(gps_lat,gps_lng),
                                     content: gps_content,
