--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                         
                         // 지도에 확대 축소 컨트롤을 생성한다
                         var zoomControl = new kakao.maps.ZoomControl();
-                        map.addControl(zoomControl, kakao.maps.ControlPosition.RIGHT);
+                        map.addControl(zoomControl, kakao.maps.ControlPosition.BOTTOMRIGHT);
 
                         ////// 내위치 스크립트 시작
                         var gps_use = null; //gps의 사용가능 여부
