--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                                 map:map
                             });
                         
-                            contentStr = "<div class='shopPin'><a href='https://map.kakao.com/link/map/"+ arr[i][3] +"' target='_blank'><span class='name'>"+ arr[i][0] +"</span></a></div>";
+                            contentStr = "<div class='storePin'><a href='https://map.kakao.com/link/map/"+ arr[i][3] +"' target='_blank'><span class='name'>"+ arr[i][0] +"</span></a></div>";
                         
                             customOverlay = new kakao.maps.CustomOverlay({
                                 map: map,
@@ -173,29 +173,29 @@
                         }
                     </script>
                 </div>
-                <!-- [전달사항] 매장별 bg가 다르기 때문에 .shopSlideWrap에 추가로 매장별 클래스명 부여 필요 -->
-                <div class="shopSlideWrap shop10oclock">
-                    <h3 class="shopName">10 o’ clock</h3>
-                    <p class="shopAddress">서울시 종로구 통인동 147-10</p>
-                    <div class="shopSlide">
-                        <div class="shopItem"><img src="assets/images/img_10oclockSlide01.jpg" alt="10 o’ clock 사진"></div>
-                        <div class="shopItem"><img src="assets/images/img_10oclockSlide02.jpg" alt="10 o’ clock 사진"></div>
-                        <div class="shopItem"><img src="assets/images/img_10oclockSlide01.jpg" alt="10 o’ clock 사진"></div>
-                        <div class="shopItem"><img src="assets/images/img_10oclockSlide02.jpg" alt="10 o’ clock 사진"></div>
+                <!-- [전달사항] 매장별 bg가 다르기 때문에 .storeSlideWrap에 추가로 매장별 클래스명 부여 필요 -->
+                <div class="storeSlideWrap store10oclock">
+                    <h3 class="storeName">10 o’ clock</h3>
+                    <p class="storeAddress">서울시 종로구 통인동 147-10</p>
+                    <div class="storeSlide">
+                        <div class="storeItem"><img src="assets/images/img_10oclockSlide01.jpg" alt="10 o’ clock 사진"></div>
+                        <div class="storeItem"><img src="assets/images/img_10oclockSlide02.jpg" alt="10 o’ clock 사진"></div>
+                        <div class="storeItem"><img src="assets/images/img_10oclockSlide01.jpg" alt="10 o’ clock 사진"></div>
+                        <div class="storeItem"><img src="assets/images/img_10oclockSlide02.jpg" alt="10 o’ clock 사진"></div>
                     </div>
-                    <ul class="shopInfo">
+                    <ul class="storeInfo">
                         <li>
-                            <img src="assets/images/icon_shop_time.svg" alt="영업시간 아이콘">
+                            <img src="assets/images/icon_store_time.svg" alt="영업시간 아이콘">
                             <strong>영업시간</strong>
                             <p>평일 09:00~23:00<br />주말 11:00~23:00</p>
                         </li>
                         <li>
-                            <img src="assets/images/icon_shop_calendar.svg" alt="휴일 아이콘">
+                            <img src="assets/images/icon_store_calendar.svg" alt="휴일 아이콘">
                             <strong>휴일</strong>
                             <p>첫째·셋째 화요일</p>
                         </li>
                         <li>
-                            <img src="assets/images/icon_shop_benefit.svg" alt="혜택 아이콘">
+                            <img src="assets/images/icon_store_benefit.svg" alt="혜택 아이콘">
                             <strong>매장내 혜택</strong>
                             <p>음식 주문시<br />“고로케 3개 무료”</p>
                         </li>
@@ -204,8 +204,8 @@
                         <p>Scroll Down</p>
                         <i><span class="blind">스크롤아이콘</span></i>
                     </div>
-                </div><!-- shopSlideWrap end -->
-                <div class="shopDetails">
+                </div><!-- storeSlideWrap end -->
+                <div class="storeDetails">
                     <!-- [전달사항] details type 총 3타입 detailsType01 / detailsType02 / detailsType03 으로 구분 -->
                     <div class="detailsType01">
                         <img src="assets/images/img_10oclockDetails01.jpg" alt="">
@@ -249,7 +249,7 @@
                             이처럼 사람을 먼저 생각하는 서비스 정신과 트랜드를 선도하겠다는 도전정신이 서촌의 탑 루프탑 카페&lt;10 o`clock&gt;의 이후 행보가 궁금해지는 이유일 것인다.
                         </p>
                     </div><!-- detailsType03 end -->
-                </div><!-- shopDetails end -->
+                </div><!-- storeDetails end -->
             </div><!-- contents end -->
 
             <footer>
