--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <div class="headerWrap">
                     <h1 class="logo">
                         <a href="/" title="메인페이지로">
-                            <img src="assets/images/logo.svg" alt="U+로드" class="off">
+                            <img src="assets/images/logo.png" alt="U+로드" class="off">
                             <img src="assets/images/logo_fix.png" alt="U+로드" class="on">
                         </a>
                     </h1>
