--- a/index.html
+++ b/index.html
@@ -150,12 +150,18 @@
                                     content: gps_content,
                                     map: map
                                 });
-                                currentOverlay.setMap(null);
+                                removeCurrentOverlay();
                                 currentOverlay.setMap(map);
                             } else {
                                 alert("접근차단하신 경우 새로고침, 아닌 경우 잠시만 기다려주세요.");
                                 gps_check();
                             }
+                        }
+                        function removeCurrentOverlay() {
+                            for (var i = 0; i < currentOverlay.length; i++) {
+                                currentOverlay[i].setMap(null);
+                            }   
+                            currentOverlay = [];
                         }
                     </script>
                 </div>
