--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
                             gps_use = false;
                         }
                         function gps_tracking(){
+                            currentOverlay.setMap(null);
                             if (gps_use) {
                                 map.panTo(new kakao.maps.LatLng(gps_lat,gps_lng));
                                 var gps_content = '<div class="myPosition"><img unselectable="on" src="assets/images/myPositionPin.svg" alt=""></div>';
@@ -153,17 +154,16 @@
                                     map: map
                                 });
                                 currentOverlay.setMap(map);
-                                markers.push(currentOverlay);
+                                /* let positionCheck = $(".myPosition");
+                                if (positionCheck.length) {
+                                    currentOverlay.setMap(map);
+                                } else {
+                                    currentOverlay.setMap(map);
+                                } */
                             } else {
                                 alert("접근차단하신 경우 새로고침, 아닌 경우 잠시만 기다려주세요.");
                                 gps_check();
                             }
-                        }
-                        function removeMarker() {
-                            for ( var i = 0; i < markers.length; i++ ) {
-                                markers[i].setMap(null);
-                            }   
-                            markers = [];
                         }
                     </script>
                 </div>
