--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
                         var gps_lat = null; // 위도
                         var gps_lng = null; // 경도
                         var gps_position; // gps 위치 객체
+                        var markers = [];
 
                         gps_check();
                         // gps가 이용가능한지 체크하는 함수이며, 이용가능하다면 show location 함수를 불러온다.
