--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
                         // error발생 시 에러의 종류를 알려주는 함수.
                         function errorHandler(error) {
                             if(error.code == 1) {
-                                alert("접근차단");
-                            } else if( err.code == 2) {
+                                alert("내 위치 찾기를 원하시면 접근차단을 변경하여 주세요.");
+                            } else if(err.code == 2) {
                                 alert("위치를 반환할 수 없습니다.");
                             }
                             gps_use = false;
