--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                         // error발생 시 에러의 종류를 알려주는 함수.
                         function errorHandler(error) {
                             if(error.code == 1) {
-                                alert("내 위치 찾기를 원하시면 접근차단을 변경하여 주세요.");
+                                alert("설정에서 나의 위치를 공유하기로 변경해주세요.");
                             } else if(err.code == 2) {
                                 alert("위치를 반환할 수 없습니다.");
                             }
