--- a/store_view.html
+++ b/store_view.html
@@ -14,6 +14,11 @@
 </head>
 <body>
 
+    <div id="skipNav">
+        <a href="#contents">본문바로가기</a>
+        <a href="#btnGnbOpen">메뉴바로가기</a>
+    </div>
+
     <div class="wrap">
         <div class="pcWrap"></div>
         <div class="mWrap">
@@ -54,7 +59,7 @@
                 </div><!-- gnbInner end -->
             </div><!-- gnb end -->
 
-            <div class="contents">
+            <div id="contents">
                 <div class="mapWrap">
                     <button type="button" class="btnMyPosition" onclick="gps_tracking();">내위치</button>
                     <div id="map" style="width: 100%;height: 290px;"></div>
@@ -137,8 +142,8 @@
                         // error발생 시 에러의 종류를 알려주는 함수.
                         function errorHandler(error) {
                             if(error.code == 1) {
-                                alert("접근차단");
-                            } else if( err.code == 2) {
+                                alert("설정에서 나의 위치를 공유하기로 변경해주세요.");
+                            } else if(err.code == 2) {
                                 alert("위치를 반환할 수 없습니다.");
                             }
                             gps_use = false;
