--- a/store_list.html
+++ b/store_list.html
@@ -63,7 +63,7 @@
                     <div class="mapWrap">
                         <div id="map" style="width: 100%;height: 290px;"></div>
                         <button type="button" class="btnMyPosition" onclick="gps_tracking();">내위치</button>
-                        <div class="custom_zoomcontrol">
+                        <div class="zoomControl">
                             <button type="button" onclick="zoomIn();"><img src="assets/images/icon_plus.svg" alt="확대"></button>
                             <button type="button" onclick="zoomOut();"><img src="assets/images/icon_minus.svg" alt="축소"></button>
                         </div>
