--- a/store_list.html
+++ b/store_list.html
@@ -71,7 +71,7 @@
                         <script>
                             var mapContainer = document.getElementById("map"), // 지도를 표시할 div 
                                 mapOption = { 
-                                    center: new kakao.maps.LatLng(37.578862, 126.971312), // 지도의 중심좌표
+                                    center: new kakao.maps.LatLng(37.48247018510616, 126.89727927479201), // 지도의 중심좌표
                                     level: 2 // 지도의 확대 레벨
                                 };
                             
@@ -86,8 +86,8 @@
                         
                             var arr = new Array();
                             // 상점이름, 위도, 경도, 링크주소
-                            arr[0] = ["10 o’ clock",37.578862,126.971312,"1438742395"];
-                            //arr[1] = ["알로이막막",37.579039,126.970545,"1296391690"];
+                            arr[0] = ["교촌치킨",37.48234907589072,126.89788715402959,"24769004"];
+                            arr[1] = ["빽다방",37.482829728751376,126.89629512847853,"26532877"];
 
                             var markerTmp;      // 마커
                             var customOverlay;  // 오버레이
