--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
                             // 상점이름, 위도, 경도, 링크주소
                             arr[0] = ["교촌치킨",37.48234907589072,126.89788715402959,"24769004"];
                             arr[1] = ["빽다방",37.482829728751376,126.89629512847853,"26532877"];
+                            arr[2] = ["컴포즈커피",37.481046098033865,126.89671309275825,"372588817"];
 
                             var markerTmp;      // 마커
                             var customOverlay;  // 오버레이
