--- a/store_view.html
+++ b/store_view.html
@@ -186,10 +186,10 @@
                     <h3 class="storeName">10 o’ clock</h3>
                     <p class="storeAddress">서울시 종로구 통인동 147-10</p>
                     <div class="storeSlide">
-                        <div class="storeItem"><img src="assets/images/img_10oclockSlide01.jpg" alt="10 o’ clock 사진"></div>
-                        <div class="storeItem"><img src="assets/images/img_10oclockSlide02.jpg" alt="10 o’ clock 사진"></div>
-                        <div class="storeItem"><img src="assets/images/img_10oclockSlide01.jpg" alt="10 o’ clock 사진"></div>
-                        <div class="storeItem"><img src="assets/images/img_10oclockSlide02.jpg" alt="10 o’ clock 사진"></div>
+                        <div class="storeThumb"><img src="assets/images/img_10oclockSlide01.jpg" alt="10 o’ clock 사진"></div>
+                        <div class="storeThumb"><img src="assets/images/img_10oclockSlide02.jpg" alt="10 o’ clock 사진"></div>
+                        <div class="storeThumb"><img src="assets/images/img_10oclockSlide01.jpg" alt="10 o’ clock 사진"></div>
+                        <div class="storeThumb"><img src="assets/images/img_10oclockSlide02.jpg" alt="10 o’ clock 사진"></div>
                     </div>
                     <ul class="storeInfo">
                         <li>
