--- a/layout.html
+++ b/layout.html
@@ -47,10 +47,8 @@
                     </div>
                     <ul>
                         <li><a href="#">매장소개</a></li>
-                        <li><a href="#">Get Coupon</a></li>
+                        <li><a href="#">응모권 이벤트</a></li>
                         <li><a href="#">룰렛 이벤트</a></li>
-                        <li><a href="#">이벤트 A</a></li>
-                        <li><a href="#">이벤트 B</a></li>
                         <li><a href="#">스탬프 투어</a></li>
                         <li><a href="#">유플러스 로드 소개</a></li>
                     </ul>
