--- a/store_view.html
+++ b/store_view.html
@@ -47,10 +47,8 @@
                     </div>
                     <ul>
                         <li><a href="#">매장소개</a></li>
-                        <li><a href="#">Get Coupon</a></li>
+                        <li><a href="#">응모권 이벤트</a></li>
                         <li><a href="#">룰렛 이벤트</a></li>
-                        <li><a href="#">이벤트 A</a></li>
-                        <li><a href="#">이벤트 B</a></li>
                         <li><a href="#">스탬프 투어</a></li>
                         <li><a href="#">유플러스 로드 소개</a></li>
                     </ul>
@@ -182,14 +180,14 @@
                     </script>
                 </div>
                 <!-- [전달사항] 매장별 bg가 다르기 때문에 .storeSlideWrap에 추가로 매장별 클래스명 부여 필요 -->
-                <div class="storeSlideWrap store10oclock">
+                <div class="storeSlideWrap storetenoclock">
                     <h3 class="storeName">10 o’ clock</h3>
                     <p class="storeAddress">서울시 종로구 통인동 147-10</p>
                     <div class="storeSlide">
-                        <div class="storeThumb"><img src="assets/images/img_10oclockSlide01.jpg" alt="10 o’ clock 사진"></div>
-                        <div class="storeThumb"><img src="assets/images/img_10oclockSlide02.jpg" alt="10 o’ clock 사진"></div>
-                        <div class="storeThumb"><img src="assets/images/img_10oclockSlide01.jpg" alt="10 o’ clock 사진"></div>
-                        <div class="storeThumb"><img src="assets/images/img_10oclockSlide02.jpg" alt="10 o’ clock 사진"></div>
+                        <div class="slideItem"><img src="assets/images/store/tenoclock/img_slide01.jpg" alt="10 o’ clock 사진"></div>
+                        <div class="slideItem"><img src="assets/images/store/tenoclock/img_slide02.jpg" alt="10 o’ clock 사진"></div>
+                        <div class="slideItem"><img src="assets/images/store/tenoclock/img_slide01.jpg" alt="10 o’ clock 사진"></div>
+                        <div class="slideItem"><img src="assets/images/store/tenoclock/img_slide02.jpg" alt="10 o’ clock 사진"></div>
                     </div>
                     <ul class="storeInfo">
                         <li>
@@ -216,7 +214,7 @@
                 <div class="storeDetails">
                     <!-- [전달사항] details type 총 3타입 detailsType01 / detailsType02 / detailsType03 으로 구분 -->
                     <div class="detailsType01">
-                        <img src="assets/images/img_10oclockDetails01.jpg" alt="">
+                        <img src="assets/images/store/tenoclock/img_details01.jpg" alt="">
                         <p class="detailsTitle">정성스러운 디저트와 따뜻한 커피 <br />한잔의 여유 10 o` clock</p>
                         <p class="detailsText">
                             과거와 현재, 도시와 자연이 공존하는 경복궁 서촌에는 하늘과 맞닿아있는 북악산과 인왕산을 배경삼아 정선스러운 디저트와 따뜻한 커피 한잔의 여유를 제공하는 서촌의 핫플레이스 루프탑카페 &lt;10 o` clock&gt;가 있다.<br /><br />
@@ -230,7 +228,7 @@
                         </p>
                     </div><!-- detailsType01 end -->
                     <div class="detailsType02">
-                        <img src="assets/images/img_10oclockDetails02.jpg" alt="">
+                        <img src="assets/images/store/tenoclock/img_details02.jpg" alt="">
                         <p class="detailsTitle">인기 좋은 데이트 장소</p>
                         <p class="detailsText">
                             높은 천장과 사방이 뚫려있는 인테리어로 가슴이 탁 트이는 야외 루프탑은 날씨가 좋은날이면 시간대와 상관없이 빈 좌석없이 항상 사람들로 가득하다고 한다.<br /><br />
@@ -241,7 +239,7 @@
                     <!-- [전달사항] .scrollLeft 태그에 업체별 이름입력 -->
                     <div class="scrollLeft">10 o’ clock</div>
                     <div class="detailsType03">
-                        <img src="assets/images/img_10oclockDetails03.jpg" alt="">
+                        <img src="assets/images/store/tenoclock/img_details03.jpg" alt="">
                         <p class="detailsTitle">서촌의 고즈넉한 분위기를 느낄 수 잇는 다양한 풍경</p>
                         <p class="detailsText">
                             일반적으로 도심에 있는 루프탑 카페 주변은 대개 옆집 옥상의 빨래나 텃밭이 보이는 경우가 대부분인데,<br />
@@ -249,7 +247,7 @@
                         </p>
                     </div><!-- detailsType03 end -->
                     <div class="detailsType03">
-                        <img src="assets/images/img_10oclockDetails04.jpg" alt="">
+                        <img src="assets/images/store/tenoclock/img_details04.jpg" alt="">
                         <p class="detailsTitle">직원들과 함께 커가는 매장</p>
                         <p class="detailsText">
                             &lt;10 o'clock&gt;는 "서비스를 제공하는 직원이 즐겁게 성장해야" 서비스를 받는 손님들에게도 최상의 서비스를 제공할 수 잇다는 것을 모토로 해서 의류 외식업의 트랜드를 이끌어 가는것이 최종목표라고 한다.<br /><br />
