--- a/store_list.html
+++ b/store_list.html
@@ -47,10 +47,8 @@
                     </div>
                     <ul>
                         <li><a href="#">매장소개</a></li>
-                        <li><a href="#">Get Coupon</a></li>
+                        <li><a href="#">응모권 이벤트</a></li>
                         <li><a href="#">룰렛 이벤트</a></li>
-                        <li><a href="#">이벤트 A</a></li>
-                        <li><a href="#">이벤트 B</a></li>
                         <li><a href="#">스탬프 투어</a></li>
                         <li><a href="#">유플러스 로드 소개</a></li>
                     </ul>
@@ -59,7 +57,7 @@
             </div><!-- gnb end -->
 
             <div id="contents">
-                <div class="mapTopFix">
+                <div class="mapTopBack">
                     <div class="mapWrap">
                         <div id="map" style="width: 100%;height: 290px;"></div>
                         <button type="button" class="btnMyPosition" onclick="gps_tracking();">내위치</button>
@@ -184,12 +182,53 @@
                             }
                         </script>
                     </div>
-                </div>
-                <div class="storeList">
-                    <div class="storeItem">
-
-                    </div>
-                </div><!-- storeList end -->
+                </div><!-- mapTopBack end -->
+                <div class="mapFront">
+                    <div class="storeList">
+                        <div class="storeItem">
+                            <p class="storeThumb"><img src="assets/images/store/tenoclock/img_thumb.jpg" alt=""></p>
+                            <p class="storeName">10 o’ clock</p>
+                            <p class="storeBenefit">1,000원당 100원 할인</p>
+                            <button type="button" class="btnStoreView">자세히보기</button>
+                        </div>
+                        <div class="storeItem">
+                            <p class="storeThumb"><img src="assets/images/store/tenoclock/img_thumb.jpg" alt=""></p>
+                            <p class="storeName">10 o’ clock</p>
+                            <p class="storeBenefit">1,000원당 100원 할인</p>
+                            <button type="button" class="btnStoreView">자세히보기</button>
+                        </div>
+                        <div class="storeItem">
+                            <p class="storeThumb"><img src="assets/images/store/tenoclock/img_thumb.jpg" alt=""></p>
+                            <p class="storeName">10 o’ clock</p>
+                            <p class="storeBenefit">1,000원당 100원 할인</p>
+                            <button type="button" class="btnStoreView">자세히보기</button>
+                        </div>
+                        <div class="storeItem">
+                            <p class="storeThumb"><img src="assets/images/store/tenoclock/img_thumb.jpg" alt=""></p>
+                            <p class="storeName">10 o’ clock</p>
+                            <p class="storeBenefit">1,000원당 100원 할인</p>
+                            <button type="button" class="btnStoreView">자세히보기</button>
+                        </div>
+                        <div class="storeItem">
+                            <p class="storeThumb"><img src="assets/images/store/tenoclock/img_thumb.jpg" alt=""></p>
+                            <p class="storeName">10 o’ clock</p>
+                            <p class="storeBenefit">1,000원당 100원 할인</p>
+                            <button type="button" class="btnStoreView">자세히보기</button>
+                        </div>
+                        <div class="storeItem">
+                            <p class="storeThumb"><img src="assets/images/store/tenoclock/img_thumb.jpg" alt=""></p>
+                            <p class="storeName">10 o’ clock</p>
+                            <p class="storeBenefit">1,000원당 100원 할인</p>
+                            <button type="button" class="btnStoreView">자세히보기</button>
+                        </div>
+                        <div class="storeItem">
+                            <p class="storeThumb"><img src="assets/images/store/tenoclock/img_thumb.jpg" alt=""></p>
+                            <p class="storeName">10 o’ clock</p>
+                            <p class="storeBenefit">1,000원당 100원 할인</p>
+                            <button type="button" class="btnStoreView">자세히보기</button>
+                        </div>
+                    </div><!-- storeList end -->
+                </div><!-- mapFront end -->
             </div><!-- contents end -->
 
             <footer>
