--- a/store_list.html
+++ b/store_list.html
@@ -189,44 +189,9 @@
                             <p class="storeThumb"><img src="assets/images/store/tenoclock/img_thumb.jpg" alt=""></p>
                             <p class="storeName">10 o’ clock</p>
                             <p class="storeBenefit">1,000원당 100원 할인</p>
-                            <button type="button" class="btnStoreView">자세히보기</button>
+                            <button type="button" class="btnStoreView" onclick="setTimeout(function(){location.href='#';}, 500);">자세히보기</button>
                         </div>
-                        <div class="storeItem">
-                            <p class="storeThumb"><img src="assets/images/store/tenoclock/img_thumb.jpg" alt=""></p>
-                            <p class="storeName">10 o’ clock</p>
-                            <p class="storeBenefit">1,000원당 100원 할인</p>
-                            <button type="button" class="btnStoreView">자세히보기</button>
-                        </div>
-                        <div class="storeItem">
-                            <p class="storeThumb"><img src="assets/images/store/tenoclock/img_thumb.jpg" alt=""></p>
-                            <p class="storeName">10 o’ clock</p>
-                            <p class="storeBenefit">1,000원당 100원 할인</p>
-                            <button type="button" class="btnStoreView">자세히보기</button>
-                        </div>
-                        <div class="storeItem">
-                            <p class="storeThumb"><img src="assets/images/store/tenoclock/img_thumb.jpg" alt=""></p>
-                            <p class="storeName">10 o’ clock</p>
-                            <p class="storeBenefit">1,000원당 100원 할인</p>
-                            <button type="button" class="btnStoreView">자세히보기</button>
-                        </div>
-                        <div class="storeItem">
-                            <p class="storeThumb"><img src="assets/images/store/tenoclock/img_thumb.jpg" alt=""></p>
-                            <p class="storeName">10 o’ clock</p>
-                            <p class="storeBenefit">1,000원당 100원 할인</p>
-                            <button type="button" class="btnStoreView">자세히보기</button>
-                        </div>
-                        <div class="storeItem">
-                            <p class="storeThumb"><img src="assets/images/store/tenoclock/img_thumb.jpg" alt=""></p>
-                            <p class="storeName">10 o’ clock</p>
-                            <p class="storeBenefit">1,000원당 100원 할인</p>
-                            <button type="button" class="btnStoreView">자세히보기</button>
-                        </div>
-                        <div class="storeItem">
-                            <p class="storeThumb"><img src="assets/images/store/tenoclock/img_thumb.jpg" alt=""></p>
-                            <p class="storeName">10 o’ clock</p>
-                            <p class="storeBenefit">1,000원당 100원 할인</p>
-                            <button type="button" class="btnStoreView">자세히보기</button>
-                        </div>
+                        
                     </div><!-- storeList end -->
                 </div><!-- mapFront end -->
             </div><!-- contents end -->
@@ -261,6 +226,7 @@
     <script src="assets/js/lib/slick.min.js"></script>
     <script src="assets/js/ui.js"></script>
     <script src="assets/js/style.js"></script>
+    <script src="assets/js/rouletter.js"></script>
 
 </body>
 </html>
