--- a/store_view.html
+++ b/store_view.html
@@ -288,6 +288,7 @@
     <script src="assets/js/lib/slick.min.js"></script>
     <script src="assets/js/ui.js"></script>
     <script src="assets/js/style.js"></script>
+    <script src="assets/js/rouletter.js"></script>
 
 </body>
 </html>
