--- a/layout.html
+++ b/layout.html
@@ -90,6 +90,7 @@
     <script src="assets/js/lib/slick.min.js"></script>
     <script src="assets/js/ui.js"></script>
     <script src="assets/js/style.js"></script>
+    <script src="assets/js/rouletter.js"></script>
 
 </body>
 </html>
