--- a/store_view.html
+++ b/store_view.html
@@ -26,8 +26,8 @@
                 <div class="headerWrap">
                     <h1 class="logo">
                         <a href="/" title="메인페이지로">
-                            <img src="assets/images/logo.png" alt="U+로드" class="off">
-                            <img src="assets/images/logo_fix.png" alt="U+로드" class="on">
+                            <img src="assets/images/logo.svg" alt="U+로드" class="off">
+                            <img src="assets/images/logo_fix.svg" alt="U+로드" class="on">
                         </a>
                     </h1>
                     <button type="button" id="btnGnbOpen">메뉴열기</button>
@@ -38,7 +38,7 @@
                 <div class="gnbInner">
                     <div class="gnbTop">
                         <a href="/" title="메인페이지로" class="gnbLogo">
-                            <img src="assets/images/logo.png" alt="U+로드">
+                            <img src="assets/images/logo.svg" alt="U+로드">
                         </a>
                         <ul class="snsGroup">
                             <li><a href="#" class="facebook">페이스북</a></li>
@@ -270,10 +270,13 @@
                     </ul>
                 </div>
                 <ul class="footerInfo">
-                    <li>대표이사<span>하현회</span></li>
+                    <li>대표이사<span>황현식</span></li>
                     <li>통신판매업신고<span>제 2015-서울용산-00481호</span></li>
-                    <li>사업자등록번호<span>220-81-39938</span></li>
-                    <li>고객센터<span>[휴대폰] 휴대폰에서 114 (무료), 1544-0010 (유료)</span></li>
+                    <li>
+                        사업자등록번호<span>220-81-39938</span>
+                        <a href="https://www.ftc.go.kr/bizCommPop.do?wrkr_no=2208139938" target="_blank" title="새창열림">사업자 정보 확인</a>
+                    </li>
+                    <li>고객센터<span>[휴대폰] 휴대폰에서 101 (무료)</span></li>
                 </ul>
                 <p class="copyright">Copyright ⓒ 2023 <span>LG Uplus Corp.</span> All rights reserved.</p>
             </footer>
