--- a/roulette.html
+++ b/roulette.html
@@ -182,15 +182,60 @@
                     </div>
                 </div><!-- mapTopBack end -->
                 <div class="mapFront">
-
-                    <div class="rouletterArea">
-                        <div class="rouletterImg">
-                            <div class="rouletterEl"><img src="https://m.lifeplanet.co.kr:444/commons/slink/administrator/openInnovation/img/MO)%20360%ED%94%8C%EB%9E%98%EB%8B%9B_%EB%A3%B0%EB%A0%9B%ED%8C%90_476x476_201026.png" alt="룰렛이미지"></div>
+                    <div class="rouletterWrap">
+                        <div class="ta_c"><img src="assets/images/tit_roulette.svg" alt="우리동네 멤버쉽 한강대로편 행운룰렛 이벤트"></div>
+                        <div class="rouletterArea">
+                            <div class="rouletterImg">
+                                <!-- [전달사항] 이미지 변경예정 -->
+                                <div class="rouletterEl"><img src="assets/images/img_rouletterEl.png" alt="룰렛이미지"></div>
+                            </div>
+                            <div class="rouletterPin"></div>
+                            <button class="btnRouletter">START</button>
                         </div>
-                        <div class="rouletterPin"></div>
-                        <button class="btnRouletter">START</button>
-                    </div>
-
+                        <div class="rouletterInfo">
+                            <div class="titleSm"><p><img src="assets/images/icon_star.svg" alt="" class="mr05">기회는 <span>단 1번!</span></p></div>
+                            <p class="titleLg"><img src="assets/images/text_eventinfo_purple.svg" alt="이벤트 안내"></p>
+                            <p class="textMd">룰렛을 돌려서 <br /><span>화살표가 멈춘 영역의 경품</span>을 드립니다.</p>
+                            <ul>
+                                <li>
+                                    <img src="assets/images/icon_event_purplemap.svg" alt="장소 아이콘">
+                                    <strong>장소</strong>
+                                    <p>이벤트 부스</p>
+                                </li>
+                                <li>
+                                    <img src="assets/images/icon_event_purpletime.svg" alt="시간 아이콘">
+                                    <strong>시간</strong>
+                                    <p>11:30~13:30<br>17:30~19:00</p>
+                                </li>
+                                <li>
+                                    <img src="assets/images/icon_event_purpletarget.svg" alt="참여대상 아이콘">
+                                    <strong>참여대상</strong>
+                                    <p>LG U+모바일을<br>이용하는 모든 고객</p>
+                                </li>
+                            </ul>
+                        </div><!-- rouletterInfo end -->
+                        <div class="rouletterSlideWrap">
+                            <div class="titleSm"><p>룰렛 이벤트</p></div>
+                            <p class="titleLg"><img src="assets/images/text_productinfo_purple.svg" alt="경품 안내"></p>
+                            <div class="rouletterSlideGroup">
+                                <div class="rouletterArrow">
+                                    <button type="button" class="prev">Prev</button>
+                                    <button type="button" class="next">Next</button>
+                                </div>
+                                <!-- [전달사항] 이미지 변경예정 -->
+                                <div class="rouletterSlide">
+                                    <div class="slideItem">
+                                        <img src="assets/images/img_rouletter_product01.png" alt="카카오 스티커 이미지">
+                                        <p><span>카카오 스티커</span></p>
+                                    </div>
+                                    <div class="slideItem">
+                                        <img src="assets/images/img_rouletter_product01.png" alt="휴대용 선풍기 이미지">
+                                        <p><span>휴대용 선풍기</span></p>
+                                    </div>
+                                </div>
+                            </div><!-- rouletterSlideGroup end -->
+                        </div><!-- rouletterSlideWrap end -->
+                    </div><!-- rouletterWrap end -->
                 </div><!-- mapFront end -->
             </div><!-- contents end -->
             
