--- a/stamp.html
+++ b/stamp.html
@@ -57,9 +57,47 @@
             </div><!-- gnb end -->
 
             <div id="contents">
-                <div class="mapTopBack">
+                <div class="stampTopBack">
+                    <div class="stampCheckWrap">
+                        <p class="title">매장 이용 후 스탬프를 모아<br /><b>경품을 받아요!</b></p>
+                        <div class="stampGroup">
+                            <!-- [전달사항] 스탬프를 얻었다면 클래스 on 추가 -->
+                            <button type="button" class="on">스탬프 얻기</button>
+                            <button type="button">스탬프 얻기</button>
+                            <button type="button">스탬프 얻기</button>
+                            <button type="button">스탬프 얻기</button>
+                        </div>
+                        <p class="text">스탬프 4개를 받아서 이벤트 부스로 오시면 <b>경품 제공!</b></p>
+                        <button type="button" id="btnGetProductOpen">경품 수령 확인</button>
+                    </div>
+                </div><!-- stampTopBack end -->
+                <div class="stampFront">
+                    <div class="stampWrap">
+                        <div class="titleSm"><p>스탬프 투어 이벤트</p></div>
+                        <p class="titleLg"><img src="assets/images/text_eventinfo_black.svg" alt="이벤트 정보"></p>
+                        <div class="stampInfo">
+                            <ul>
+                                <li>
+                                    <img src="assets/images/icon_event_method.svg" alt="참여방법 아이콘">
+                                    <strong>참여방법</strong>
+                                    <p>매장 이용 후 카운터<br />직원에게 스탬프를 보여주세요</p>
+                                </li>
+                                <li>
+                                    <img src="assets/images/icon_event_rule.svg" alt="규칙 아이콘">
+                                    <strong>규칙</strong>
+                                    <p>제휴 매장 4곳 이용 후 스탬프를<br />받아서, 이벤트 부스로 오시면<br />경품을 제공 해 드립니다.</p>
+                                </li>
+                            </ul>
+                        </div>
+                        <ul class="dotList mb50">
+                            <li>매일 선착순 20명에게 제공됩니다.</li>
+                            <li>경품은 아래 장소에서 수령하실 수 있습니다.</li>
+                        </ul>
+                        <div class="titleSm"><p>스탬프 경품</p></div>
+                        <p class="titleLg"><img src="assets/images/text_productinfo_black.svg" alt="경품 안내"></p>
+                    </div><!-- stampWrap end -->
                     <div class="mapWrap">
-                        <div id="map" style="width: 100%;height: 360px;"></div>
+                        <div id="map" style="width: 100%;height: 290px;"></div>
                         <button type="button" class="btnMyPosition" onclick="gps_tracking();">내위치</button>
                         <div class="zoomControl">
                             <button type="button" onclick="zoomIn();"><img src="assets/images/icon_plus.svg" alt="확대"></button>
@@ -180,64 +218,15 @@
                             }
                         </script>
                     </div>
-                </div><!-- mapTopBack end -->
-                <div class="mapFront">
-                    <div class="rouletterWrap">
-                        <div class="ta_c"><img src="assets/images/tit_roulette.svg" alt="우리동네 멤버쉽 한강대로편 행운룰렛 이벤트"></div>
-                        <div class="rouletterArea">
-                            <div class="rouletterImg">
-                                <!-- [전달사항] 이미지 변경예정 -->
-                                <div class="rouletterEl"><img src="assets/images/img_rouletterEl.png" alt="룰렛이미지"></div>
-                            </div>
-                            <div class="rouletterPin"></div>
-                            <button class="btnRouletter">START</button>
-                        </div>
-                        <div class="rouletterInfo">
-                            <div class="titleSm"><p><img src="assets/images/icon_star.svg" alt="" class="mr05">기회는 <span>단 1번!</span></p></div>
-                            <p class="titleLg"><img src="assets/images/text_eventinfo_purple.svg" alt="이벤트 안내"></p>
-                            <p class="textMd">룰렛을 돌려서 <br /><span>화살표가 멈춘 영역의 경품</span>을 드립니다.</p>
-                            <ul>
-                                <li>
-                                    <img src="assets/images/icon_event_purplemap.svg" alt="장소 아이콘">
-                                    <strong>장소</strong>
-                                    <p>이벤트 부스</p>
-                                </li>
-                                <li>
-                                    <img src="assets/images/icon_event_purpletime.svg" alt="시간 아이콘">
-                                    <strong>시간</strong>
-                                    <p>11:30~13:30<br>17:30~19:00</p>
-                                </li>
-                                <li>
-                                    <img src="assets/images/icon_event_purpletarget.svg" alt="참여대상 아이콘">
-                                    <strong>참여대상</strong>
-                                    <p>LG U+모바일을<br>이용하는 모든 고객</p>
-                                </li>
-                            </ul>
-                        </div><!-- rouletterInfo end -->
-                        <div class="rouletterSlideWrap">
-                            <div class="titleSm"><p>룰렛 이벤트</p></div>
-                            <p class="titleLg"><img src="assets/images/text_productinfo_purple.svg" alt="경품 안내"></p>
-                            <div class="rouletterSlideGroup">
-                                <div class="rouletterArrow">
-                                    <button type="button" class="prev">Prev</button>
-                                    <button type="button" class="next">Next</button>
-                                </div>
-                                <!-- [전달사항] 이미지 변경예정 -->
-                                <div class="rouletterSlide">
-                                    <div class="slideItem">
-                                        <img src="assets/images/img_rouletter_product01.png" alt="카카오 스티커 이미지">
-                                        <p><span>카카오 스티커</span></p>
-                                    </div>
-                                    <div class="slideItem">
-                                        <img src="assets/images/img_rouletter_product01.png" alt="휴대용 선풍기 이미지">
-                                        <p><span>휴대용 선풍기</span></p>
-                                    </div>
-                                </div>
-                            </div><!-- rouletterSlideGroup end -->
-                        </div><!-- rouletterSlideWrap end -->
-                    </div><!-- rouletterWrap end -->
-                </div><!-- mapFront end -->
+                </div><!-- stampFront end -->
             </div><!-- contents end -->
+
+            <div id="GetProductPopup">
+                <div class="GetProductPopupInner">
+                    
+                    <button type="button" class="btnGetProductClose">취소</button>
+                </div><!-- GetProductPopup end -->
+            </div><!-- GetProductPopupInner end -->
             
             <footer>
                 <div class="footerTop">
