--- a/ticket.html
+++ b/ticket.html
@@ -182,60 +182,58 @@
                     </div>
                 </div><!-- mapTopBack end -->
                 <div class="mapFront">
-                    <div class="rouletterWrap">
-                        <div class="ta_c"><img src="assets/images/tit_roulette.svg" alt="우리동네 멤버쉽 한강대로편 행운룰렛 이벤트"></div>
-                        <div class="rouletterArea">
-                            <div class="rouletterImg">
-                                <!-- [전달사항] 이미지 변경예정 -->
-                                <div class="rouletterEl"><img src="assets/images/img_rouletterEl.png" alt="룰렛이미지"></div>
-                            </div>
-                            <div class="rouletterPin"></div>
-                            <button class="btnRouletter">START</button>
-                        </div>
-                        <div class="rouletterInfo">
-                            <div class="titleSm"><p><img src="assets/images/icon_star.svg" alt="" class="mr05">기회는 <span>단 1번!</span></p></div>
-                            <p class="titleLg"><img src="assets/images/text_eventinfo_purple.svg" alt="이벤트 안내"></p>
-                            <p class="textMd">룰렛을 돌려서 <br /><span>화살표가 멈춘 영역의 경품</span>을 드립니다.</p>
+                    <div class="ticketWrap">
+                        <div class="ticketInfo">
+                            <div class="titleSm"><p>응모 횟수가 많을수록 당첨 확률UP!</p></div>
+                            <p class="titleLg"><img src="assets/images/text_eventinfo_pink.svg" alt="이벤트 안내"></p>
+                            <p class="textMd">제휴 매장 이용 후 제휴 매장에서<br /> <span>응모권 수령 하여, 작성</span> 하고 거점 부스내<br /> 응모함에 응모하면 행사 종료 후 추첨을 통해<br /> 당첨자에게 경품을 제공합니다.</p>
+                            <!-- [전달사항] 이미지 변경예정 -->
+                            <div class="ta_c mt20"><img src="assets/images/img_ex.svg" alt=""></div>
                             <ul>
                                 <li>
-                                    <img src="assets/images/icon_event_purplemap.svg" alt="장소 아이콘">
+                                    <img src="assets/images/icon_event_pinkmap.svg" alt="장소 아이콘">
                                     <strong>장소</strong>
-                                    <p>이벤트 부스</p>
+                                    <p>각 제휴 매장</p>
                                 </li>
                                 <li>
-                                    <img src="assets/images/icon_event_purpletime.svg" alt="시간 아이콘">
+                                    <img src="assets/images/icon_event_pinktime.svg" alt="시간 아이콘">
                                     <strong>시간</strong>
-                                    <p>11:30~13:30<br>17:30~19:00</p>
+                                    <p>매장별 운영 시간</p>
                                 </li>
                                 <li>
-                                    <img src="assets/images/icon_event_purpletarget.svg" alt="참여대상 아이콘">
+                                    <img src="assets/images/icon_event_pinktarget.svg" alt="참여대상 아이콘">
                                     <strong>참여대상</strong>
-                                    <p>LG U+모바일을<br>이용하는 모든 고객</p>
+                                    <p>U+ 모바일 고객</p>
                                 </li>
                             </ul>
-                        </div><!-- rouletterInfo end -->
-                        <div class="rouletterSlideWrap">
-                            <div class="titleSm"><p>룰렛 이벤트</p></div>
-                            <p class="titleLg"><img src="assets/images/text_productinfo_purple.svg" alt="경품 안내"></p>
-                            <div class="rouletterSlideGroup">
-                                <div class="rouletterArrow">
-                                    <button type="button" class="prev">Prev</button>
-                                    <button type="button" class="next">Next</button>
+                        </div><!-- ticketInfo end -->
+                        <div class="ticketSlideWrap">
+                            <div class="titleSm"><p>응모권 이벤트</p></div>
+                            <p class="titleLg"><img src="assets/images/text_productinfo_pink.svg" alt="경품 안내"></p>
+                            <div class="ticketSlide">
+                                <div class="slideItem">
+                                    <span>1 명</span>
+                                    <img src="assets/images/img_ticket_product01.png" alt="엑스박스 이미지">
+                                    <p>엑스박스</p>
                                 </div>
-                                <!-- [전달사항] 이미지 변경예정 -->
-                                <div class="rouletterSlide">
-                                    <div class="slideItem">
-                                        <img src="assets/images/img_rouletter_product01.png" alt="카카오 스티커 이미지">
-                                        <p><span>카카오 스티커</span></p>
-                                    </div>
-                                    <div class="slideItem">
-                                        <img src="assets/images/img_rouletter_product01.png" alt="휴대용 선풍기 이미지">
-                                        <p><span>휴대용 선풍기</span></p>
-                                    </div>
+                                <div class="slideItem">
+                                    <span>2 명</span>
+                                    <img src="assets/images/img_ticket_product02.png" alt="갤럭시워치5 이미지">
+                                    <p>갤럭시워치5</p>
                                 </div>
-                            </div><!-- rouletterSlideGroup end -->
-                        </div><!-- rouletterSlideWrap end -->
-                    </div><!-- rouletterWrap end -->
+                                <div class="slideItem">
+                                    <span>5 명</span>
+                                    <img src="assets/images/img_ticket_product03.png" alt="드롱기 전기포트 이미지">
+                                    <p>드롱기 전기포트</p>
+                                </div>
+                                <div class="slideItem">
+                                    <span>10 명</span>
+                                    <img src="assets/images/img_ticket_product04.png" alt="CGV 골드클래스 티켓 이미지">
+                                    <p>CGV 골드클래스 티켓</p>
+                                </div>
+                            </div>
+                        </div><!-- ticketSlideWrap end -->
+                    </div><!-- ticketWrap end -->
                 </div><!-- mapFront end -->
             </div><!-- contents end -->
             
